adjusted height on dreamstars mini wrap, for now.. was buggin me

--- a/app/sass/home.sass
+++ b/app/sass/home.sass
@@ -285,7 +285,7 @@ body
       +transparent
       +glow-blue(40)
       width: 220px
-      height: 300px
+      height: 276px
       img.logo
         +absolute
         top: -18px
